tests/NormalTests/paczka1/small_fuzzy/40752325.err
Error in line 9: YmlcJ1f6FVU S388 41,1
Error in line 12: S388 S4 16,8
Error in line 11: YmlcJ1f6FVU S4 83,2
Error in line 13: S388 A951 77,5
